--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,6 +42,14 @@
   --color-popover: var(--popover);
   --color-card-foreground: var(--card-foreground);
   --color-card: var(--card);
+  --color-success: var(--success);
+  --color-success-foreground: var(--success-foreground);
+  --color-danger: var(--danger);
+  --color-danger-foreground: var(--danger-foreground);
+  --color-warning: var(--warning);
+  --color-warning-foreground: var(--warning-foreground);
+  --color-info: var(--info);
+  --color-info-foreground: var(--info-foreground);
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
@@ -57,9 +65,11 @@
   --primary-foreground: oklch(0.985 0 0);
   --secondary: oklch(0.97 0 0);
   --secondary-foreground: oklch(0.205 0 0);
-  --success: oklch(0.646 0.222 41.116);
+  --success: oklch(0.596 0.145 163.225);
   --success-foreground: oklch(1 0 0);
-  --warning: oklch(0.398 0.07 227.392);
+  --danger: oklch(0.577 0.245 27.325);
+  --danger-foreground: oklch(1 0 0);
+  --warning: oklch(0.646 0.222 41.116);
   --warning-foreground: oklch(1 0 0);
   --info: oklch(0.828 0.189 84.429);
   --info-foreground: oklch(1 0 0);
